// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordField > renders masked 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="text-sm font-semibold"
    for="field-password"
  >
    Password
  </label>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="w-full rounded-box border-tip py-2 pl-3 text-sm outline-none focus:border-third disabled:cursor-not-allowed disabled:bg-palette-bg1 border bg-white pr-10"
      id="field-password"
      type="password"
    />
    <span
      class="absolute inset-y-0 right-1 flex items-center"
    >
      <button
        aria-label="Show password"
        class="rounded-box p-1 text-tip transition-colors hover:text-third focus-visible:text-third"
        title="Show password"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12s3.6-6.5 10-6.5S22 12 22 12s-3.6 6.5-10 6.5S2 12 2 12Z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`PasswordField > renders revealed 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="text-sm font-semibold"
    for="field-password"
  >
    Password
  </label>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="w-full rounded-box border-tip py-2 pl-3 text-sm outline-none focus:border-third disabled:cursor-not-allowed disabled:bg-palette-bg1 border bg-white pr-10"
      id="field-password"
      type="text"
    />
    <span
      class="absolute inset-y-0 right-1 flex items-center"
    >
      <button
        aria-label="Hide password"
        class="rounded-box p-1 text-tip transition-colors hover:text-third focus-visible:text-third"
        title="Hide password"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
        >
          <path
            d="M10.7 5.6A11 11 0 0 1 12 5.5c6.4 0 10 6.5 10 6.5a19 19 0 0 1-3.3 4.1"
          />
          <path
            d="M6.5 6.6A18.9 18.9 0 0 0 2 12s3.6 6.5 10 6.5a10.8 10.8 0 0 0 4-.7"
          />
          <path
            d="M9.9 9.9a3 3 0 0 0 4.2 4.2"
          />
          <path
            d="m3 3 18 18"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;
